# biomimetics

./: .gitignore  .serena_ignore  MCP_QUICKSTART.md  PLANNER.md  PROJECT_WIKI.md  README.md  agents.md  autonomous_vultr_repair.py  debug_e2e_audio.py  debug_resp.json  debug_save.sh  full_stream.jsonl  gcp_memory_logs.json  gcp_services.json  gemini_relay_logs.txt  merge.py  raw_vultr_key.txt  sanitize_git.sh  simple_test.sh  test_audio_schema.py  test_e2e_local_audio.py  test_e2e_reconstructed.py  test_endpoint_perms.py  test_gemini_direct.py  test_local_speaker.py  test_remote_vultr.py  test_save.sh  test_vad_trigger_proof.py  test_vultr_client_updated.py  test_vultr_discovery.py  test_vultr_full.py  universal_skill_frame_design.md  vultr_debug.txt  vultr_services.txt
.bios/: manifest.json
scripts/copaw/: README.md  approval_poller.py  copaw-memory-interceptor.py  copaw-tool-guard.py  copaw-webhook-receiver.py  gmail_auth.py  jarvis_daemon.py  jarvis_daemon.py.backup2  jarvis_daemon.py.backup3_20260322_131607  jarvis_daemon.py.bak  launch_copaw_services.py  mcp_email_server.py  pyproject.toml  whatsapp_bridge.py
scripts/copaw/src/copaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/copaw/src/copaw/agents/: command_handler.py  prompt.py  react_agent.py
scripts/copaw/src/copaw/agents/hooks/: __init__.py
scripts/copaw/src/copaw/agents/memory/: __init__.py
scripts/copaw/src/copaw/app/: _app.py  console_push_store.py
scripts/copaw/src/copaw/config/: config.py
scripts/copaw/src/copaw/console/: index.html
(+323 files in other folders)
